[gd_scene load_steps=4 format=3 uid="uid://lhij55pqhbif"]

[ext_resource type="Script" path="res://Scripts/UI/InventorySlot.gd" id="3"]
[ext_resource type="Texture2D" uid="uid://djpaymc2egaq5" path="res://Assets/Images/present.png" id="3_dtark"]
[ext_resource type="Texture2D" uid="uid://dpon1onx65klm" path="res://Assets/Images/UI/UI_DialogueBox.svg" id="4"]

[node name="InventorySlot" type="NinePatchRect"]
self_modulate = Color(0.109804, 0.109804, 0.109804, 1)
anchors_preset = -1
anchor_right = 0.124
anchor_bottom = 0.184
offset_right = 14.024
offset_bottom = -0.216011
texture = ExtResource("4")
region_rect = Rect2(0, 0, 128, 128)
patch_margin_left = 32
patch_margin_top = 32
patch_margin_right = 32
patch_margin_bottom = 32
script = ExtResource("3")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchors_preset = -1
anchor_left = 0.07
anchor_top = 0.101
anchor_right = 0.93
anchor_bottom = 0.899
offset_left = 0.01896
offset_top = -0.0206165
offset_right = -0.0189667
offset_bottom = 0.020607
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 0
size_flags_vertical = 0

[node name="TextureRect" type="TextureRect" parent="VBoxContainer"]
offset_right = 134.0
offset_bottom = 65.0
size_flags_vertical = 3
texture = ExtResource("3_dtark")
stretch_mode = 5

[node name="Label" type="Label" parent="VBoxContainer"]
clip_contents = true
offset_top = 69.0
offset_right = 134.0
offset_bottom = 95.0
text = "My Pickup item is v"
horizontal_alignment = 1
clip_text = true

[connection signal="focus_entered" from="." to="." method="_focus_entered"]
[connection signal="focus_exited" from="." to="." method="_focus_exited"]
[connection signal="mouse_entered" from="." to="." method="_hover_entered"]
[connection signal="mouse_exited" from="." to="." method="_hover_exited"]
